[project]
name = "blurifier"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "better-profanity>=0.7.0",
    "celery[redis]>=5.5.3",
    "django>=5.2",
    "django-celery-beat>=2.8.1",
    "django-ninja>=1.4.3",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.0",
    "fakeredis>=2.30.1",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "python-dotenv>=1.1.1",
    "redis>=5.2.1",
    "ruff>=0.12.5",
    "uvicorn>=0.35.0",
    "uwsgi>=2.0.30",
]
[tool.ruff.format]
quote-style = "single"
